src/base0/ParserI.java
/* ParserI.java */
/* Generated By:JavaCC: Do not edit this line. ParserI.java */
package base0;

/**
 * ID lister.
 */
public class ParserI implements ParserIConstants {
	
	static final public ASTNode Start() throws ParseException {
		ASTNode t;
		t = Exp();
		jj_consume_token(EL);
		{
			if ("" != null) return t;
		}
		throw new Error("Missing return statement in function");
	}
	
	static final public ASTNode Exp() throws ParseException {
		Token op;
		ASTNode t1, t2;
		t1 = Term();
		label_1:
		while (true) {
			switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
				case PLUS:
				case MINUS: {
					break;
				}
				default:
					jj_la1[0] = jj_gen;
					break label_1;
			}
			switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
				case PLUS: {
					op = jj_consume_token(PLUS);
					break;
				}
				case MINUS: {
					op = jj_consume_token(MINUS);
					break;
				}
				default:
					jj_la1[1] = jj_gen;
					jj_consume_token(-1);
					throw new ParseException();
			}
			t2 = Term();
			if (op.kind == PLUS)
				t1 = new ASTPlus(t1, t2);
			else t1 = new ASTSub(t1, t2);
		}
		{
			if ("" != null) return t1;
		}
		throw new Error("Missing return statement in function");
	}
	
	static final public ASTNode Term() throws ParseException {
		Token op;
		ASTNode t1, t2;
		t1 = Fact();
		switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
			case TIMES:
			case DIV: {
				switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
					case TIMES: {
						op = jj_consume_token(TIMES);
						break;
					}
					case DIV: {
						op = jj_consume_token(DIV);
						break;
					}
					default:
						jj_la1[2] = jj_gen;
						jj_consume_token(-1);
						throw new ParseException();
				}
				t2 = Term();
				if (op.kind == TIMES)
					t1 = new ASTTimes(t1, t2);
				else t1 = new ASTDiv(t1, t2);
				break;
			}
			default:
				jj_la1[3] = jj_gen;
		}
		{
			if ("" != null) return t1;
		}
		throw new Error("Missing return statement in function");
	}
	
	static final public ASTNode Fact() throws ParseException {
		Token n;
		ASTNode t;
		switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
			case Num: {
				n = jj_consume_token(Num);
				t = new ASTNum(Integer.parseInt(n.image));
				break;
			}
			case LPAR: {
				jj_consume_token(LPAR);
				t = Exp();
				jj_consume_token(RPAR);
				break;
			}
			case MINUS: {
				n = jj_consume_token(MINUS);
				t = new ASTUMinus(Fact());
				break;
			}
			default:
				jj_la1[4] = jj_gen;
				jj_consume_token(-1);
				throw new ParseException();
		}
		{
			if ("" != null) return t;
		}
		throw new Error("Missing return statement in function");
	}
	
	static private boolean jj_initialized_once = false;
	/**
	 * Generated Token Manager.
	 */
	static public ParserITokenManager token_source;
	static SimpleCharStream jj_input_stream;
	/**
	 * Current token.
	 */
	static public Token token;
	/**
	 * Next token.
	 */
	static public Token jj_nt;
	static private int jj_ntk;
	static private int jj_gen;
	static final private int[] jj_la1 = new int[5];
	static private int[] jj_la1_0;
	
	static {
		jj_la1_init_0();
	}
	
	private static void jj_la1_init_0() {
		jj_la1_0 = new int[]{0xc0, 0xc0, 0x300, 0x300, 0x4a0,};
	}
	
	/**
	 * Constructor with InputStream.
	 */
	public ParserI(java.io.InputStream stream) {
		this(stream, null);
	}
	
	/**
	 * Constructor with InputStream and supplied encoding
	 */
	public ParserI(java.io.InputStream stream, String encoding) {
		if (jj_initialized_once) {
			System.out.println("ERROR: Second call to constructor of static parser.  ");
			System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
			System.out.println("	   during parser generation.");
			throw new Error();
		}
		jj_initialized_once = true;
		try {
			jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1);
		}
		catch (java.io.UnsupportedEncodingException e) {
			throw new RuntimeException(e);
		}
		token_source = new ParserITokenManager(jj_input_stream);
		token = new Token();
		jj_ntk = -1;
		jj_gen = 0;
		for (int i = 0; i < 5; i++) jj_la1[i] = -1;
	}
	
	/**
	 * Reinitialise.
	 */
	static public void ReInit(java.io.InputStream stream) {
		ReInit(stream, null);
	}
	
	/**
	 * Reinitialise.
	 */
	static public void ReInit(java.io.InputStream stream, String encoding) {
		try {
			jj_input_stream.ReInit(stream, encoding, 1, 1);
		}
		catch (java.io.UnsupportedEncodingException e) {
			throw new RuntimeException(e);
		}
		ParserITokenManager.ReInit(jj_input_stream);
		token = new Token();
		jj_ntk = -1;
		jj_gen = 0;
		for (int i = 0; i < 5; i++) jj_la1[i] = -1;
	}
	
	/**
	 * Constructor.
	 */
	public ParserI(java.io.Reader stream) {
		if (jj_initialized_once) {
			System.out.println("ERROR: Second call to constructor of static parser. ");
			System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
			System.out.println("	   during parser generation.");
			throw new Error();
		}
		jj_initialized_once = true;
		jj_input_stream = new SimpleCharStream(stream, 1, 1);
		token_source = new ParserITokenManager(jj_input_stream);
		token = new Token();
		jj_ntk = -1;
		jj_gen = 0;
		for (int i = 0; i < 5; i++) jj_la1[i] = -1;
	}
	
	/**
	 * Reinitialise.
	 */
	static public void ReInit(java.io.Reader stream) {
		if (jj_input_stream == null) {
			jj_input_stream = new SimpleCharStream(stream, 1, 1);
		}
		else {
			jj_input_stream.ReInit(stream, 1, 1);
		}
		if (token_source == null) {
			token_source = new ParserITokenManager(jj_input_stream);
		}
		
		ParserITokenManager.ReInit(jj_input_stream);
		token = new Token();
		jj_ntk = -1;
		jj_gen = 0;
		for (int i = 0; i < 5; i++) jj_la1[i] = -1;
	}
	
	/**
	 * Constructor with generated Token Manager.
	 */
	public ParserI(ParserITokenManager tm) {
		if (jj_initialized_once) {
			System.out.println("ERROR: Second call to constructor of static parser. ");
			System.out.println("	   You must either use ReInit() or set the JavaCC option STATIC to false");
			System.out.println("	   during parser generation.");
			throw new Error();
		}
		jj_initialized_once = true;
		token_source = tm;
		token = new Token();
		jj_ntk = -1;
		jj_gen = 0;
		for (int i = 0; i < 5; i++) jj_la1[i] = -1;
	}
	
	/**
	 * Reinitialise.
	 */
	public void ReInit(ParserITokenManager tm) {
		token_source = tm;
		token = new Token();
		jj_ntk = -1;
		jj_gen = 0;
		for (int i = 0; i < 5; i++) jj_la1[i] = -1;
	}
	
	static private Token jj_consume_token(int kind) throws ParseException {
		Token oldToken;
		if ((oldToken = token).next != null) token = token.next;
		else token = token.next = ParserITokenManager.getNextToken();
		jj_ntk = -1;
		if (token.kind == kind) {
			jj_gen++;
			return token;
		}
		token = oldToken;
		jj_kind = kind;
		throw generateParseException();
	}
	
	
	/**
	 * Get the next Token.
	 */
	static final public Token getNextToken() {
		if (token.next != null) token = token.next;
		else token = token.next = ParserITokenManager.getNextToken();
		jj_ntk = -1;
		jj_gen++;
		return token;
	}
	
	/**
	 * Get the specific Token.
	 */
	static final public Token getToken(int index) {
		Token t = token;
		for (int i = 0; i < index; i++) {
			if (t.next != null) t = t.next;
			else t = t.next = ParserITokenManager.getNextToken();
		}
		return t;
	}
	
	static private int jj_ntk_f() {
		if ((jj_nt = token.next) == null)
			return (jj_ntk = (token.next = ParserITokenManager.getNextToken()).kind);
		else
			return (jj_ntk = jj_nt.kind);
	}
	
	static private final java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
	static private int[] jj_expentry;
	static private int jj_kind = -1;
	
	/**
	 * Generate ParseException.
	 */
	static public ParseException generateParseException() {
		jj_expentries.clear();
		boolean[] la1tokens = new boolean[13];
		if (jj_kind >= 0) {
			la1tokens[jj_kind] = true;
			jj_kind = -1;
		}
		for (int i = 0; i < 5; i++) {
			if (jj_la1[i] == jj_gen) {
				for (int j = 0; j < 32; j++) {
					if ((jj_la1_0[i] & (1 << j)) != 0) {
						la1tokens[j] = true;
					}
				}
			}
		}
		for (int i = 0; i < 13; i++) {
			if (la1tokens[i]) {
				jj_expentry = new int[1];
				jj_expentry[0] = i;
				jj_expentries.add(jj_expentry);
			}
		}
		int[][] exptokseq = new int[jj_expentries.size()][];
		for (int i = 0; i < jj_expentries.size(); i++) {
			exptokseq[i] = jj_expentries.get(i);
		}
		return new ParseException(token, exptokseq, tokenImage);
	}
	
	static private boolean trace_enabled;
	
	/**
	 * Trace enabled.
	 */
	static final public boolean trace_enabled() {
		return trace_enabled;
	}
	
	/**
	 * Enable tracing.
	 */
	static final public void enable_tracing() {
	}
	
	/**
	 * Disable tracing.
	 */
	static final public void disable_tracing() {
	}
	
}
